prometheus/templates/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitor
  labels:
    app: prometheus
    version: "2.0"
spec:
  selector:
    app: prometheus
    version: "2.0"
  ports:
  - port: 80
    targetPort: 9090
