prometheus/templates/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitor
spec:
  rules:
  - host: grafana.test-cloud.bigdata.wanda.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
