prometheus/templates/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitor
spec:
  rules:
  - host: prometheus.test-cloud.bigdata.wanda.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 80
